manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "edgecluster-dd41"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "edgecluster-dd41"
  template:
    metadata:
      labels:
        app: "edgecluster-dd41"
    spec:
      containers:
        - name: "edgecluster-dd41"
          image: "containerregistry1999.azurecr.io/edgecluster"
          ports:
          - containerPort: 80
